Tue Nov  1 14:14:31 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Managed_Types.h:
        * tao/Managed_Types.i:
        
          Added constructors for TAO_String_Manager and
          TAO_WString_Manager from const char* and const CORBA::WChar*
          respectively (each constructor makes a copy). These new
          constructors are used in generated code for valuetypes, in
          the initializing constructor added in
          
          Fri Oct 28 23:55:14 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

Tue Nov  1 12:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2074_Regression/*:
        * orbsvcs/tests/Bug_2074_Regression/*:
          Moved test to orbsvs

Tue Nov  1 11:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/generic_sequence.hpp:
          Fixed typo

Tue Nov  1 10:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/File_IO/File_i.cpp:
          64bit fix

Tue Nov  1 10:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/CSD_Strategy/TestInf/ClientTask.cpp:
        * tests/CSD_Strategy_Tests/TP_Common/ClientTask.cpp:
          Fixed 64bit conversion warnings

Tue Nov  1 10:04:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Profile.cpp:
          Use prefix operators to modify the refcount

Tue Nov  1 09:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1495_Regression/Client_Task.cpp:
          Extended this test to do multiple calls. It will fail now

        * tests/Bug_2289_Regression/MyStruct*.{h,cpp,inl}:
          Removed generated files, shouldn't be in the repo

Tue Nov  1 09:35:36 2005  Simon McQueen  <sm@prismtech.com>

        * tests/Bug_2289_Regression/Bug_2289_Regression.mpc:
        * tests/Bug_2289_Regression/MyInterfaceImpl.cpp:
        * tests/Bug_2289_Regression/MyInterfaceImpl.h: