@@ -224,8 +224,10 @@ be_visitor_valuetype_obv_cs::gen_obv_init_constructor_init_list (
        !si.is_done ();
        si.next())
     {
-      AST_Field *f = AST_Field::narrow_from_decl (si.item ());
+      be_field *f = be_field::narrow_from_decl (si.item ());
       
+      // be_attribute doesn't inherit from be_field (unlike the
+      // AST_* counterparts, so this screens attributes and operations.
       if (f == 0)
         {
           continue;
@@ -263,6 +265,8 @@ be_visitor_valuetype_obv_cs::gen_obv_init_base_constructor_args (
        !si.is_done ();
        si.next())
     {
+      // be_attribute doesn't inherit from be_field (unlike the
+      // AST_* counterparts, so this screens attributes and operations.
       be_field *f = be_field::narrow_from_decl (si.item ());
       
       if (f == 0)
